<resources>
    <string name="app_name">Evrim Okulları</string>
    <string name="title">Başlık</string>
    <string name="share">Paylaş</string>
    <string name="title_activity_login">Giriş yap</string>
    <string name="prompt_email">Email adresi</string>
    <string name="prompt_password">Şifre</string>
    <string name="action_sign_in">Giriş Yap</string>
    <string name="action_sign_in_short">Giriş Yap</string>
    <string name="error_invalid_email">Bu mail adresi geçerli değildir</string>
    <string name="error_invalid_password">Bu şifre çok kısa</string>
    <string name="error_incorrect_password">Bu şifre hatalıdır</string>
    <string name="error_field_required">Bu alan zorunludur</string>
    <string name="permission_rationale" translatable="false">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="next">İLERİ</string>
    <string name="skip">ATLA</string>
    <string name="start">ANLADIM</string>
    <string name="slide_1_title">EvrimNews</string>
    <string name="slide_1_desc">Özel Evrim Okulları hakkında aradığınız tüm bilgilere ulaşmanızı sağlar.</string>
    <string name="slide_2_title">Daha fazla bilgi</string>
    <string name="slide_2_desc">İnternet sitemizde bulabileceğiniz bilgilerin çok daha fazlasını, daha kolay şekilde bu uygulamada bulabilirsiniz.</string>
    <string name="slide_3_title">Yeni Teknolojiler ile Donatıldı</string>
    <string name="slide_3_desc">EvrimNews, sizlerin okulumuz hakkındaki bilgilere kolaylıkla ulaşabilmeniz için son teknolojilerle çalışmaktadır. Google da arama yapmanız durumunda artık bilgilere bu uygulama sayesinde erişeceksiniz.</string>
    <string name="slide_4_title">Yenilenen Kolay Arayüz</string>
    <string name="slide_4_desc">EvrimNews, yeni güncellemesiyle uygulamayı daha kolay kullanabilmeniz için basit bir arayüze sahip. Kolaylıkla her şeye ulaşabilirsiniz.</string>
    <string name="adminButton">Yönetici</string>
    <string name="veliButton">Veli</string>
    <string name="ogretmenButton">Öğretmen</string>
    <string name="dark_mode">Koyu Arayüz</string>
    <string name="open_source_licenses">Açık Kaynak Lisanslar</string>
    <string name="tarihcemiz">Tarihçemiz</string>
    <string name="aylik_yemek">Aylık Yemek Menüleri</string>
    <string name="veli_gorusme">Veli Görüşme Günleri</string>
    <string name="basarilarimiz">Başarılarımız</string>
    <string name="mezunlarimiz">Mezunlarımız</string>
    <string name="gorusler">Görüşler</string>
    <string name="sosyal_evrim">Sosyal Evrim</string>
    <string name="blog">Blog</string>
    <string name="search">Ara</string>
    <string name="kadromuz">Kadromuz</string>
    <string name="ortaklarimiz">Ortaklarımız</string>
    <string name="kurucu_temsilcisi">Kurucu Temsilcisi</string>
    <string name="okul_kayitlari">Okul Kayıtları</string>
    <string name="insan_kaynaklari">İnsan Kaynaklari</string>
    <string name="iletisim">İletişim</string>
    <string name="duyurular">Duyurular</string>
    <string name="calisma_takvimi">Çalışma Takvimi</string>
    <string name="egitim_projemiz">Eğitim Projemiz</string>
    <string name="yabanci_dil">Yabancı Dil</string>
    <string name="ilkokul">İlkokul</string>
    <string name="ortaokul">Ortaokul</string>
    <string name="ders_katalogu">Ders Kataloğu</string>
    <string name="kulupler">Kulüpler</string>
    <string name="kurslar">Kurslar</string>
    <string name="rehberlik_servisi">Rehberlik Servisi</string>
    <string name="kutuphane">Kütüphane</string>
    <string name="egitim_spor_alanlari">Eğitim ve Spor Alanları</string>
    <string name="kampus_birimleri">Kampüs Birimleri</string>
    <string name="okulumuzu_taniyin">Okulumuzu Tanıyın</string>
    <string name="evrim_guncel">Evrim Güncel</string>
    <string name="akademik_egitim">Akademik Eğitim</string>
    <string name="ozelevrim">Özel Evrim Okulları</string>
    <string name="help">Yardım</string>
    <string name="settings">Ayarlar</string>
    <string name="about">Uygulama Hakkında</string>
    <string name="title_activity_settings">Ayarlar</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="localization">Uygulama Dili</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="twiceexit">Çıkmak için tekrar geriye basınız.</string>
    <string name="copyrighttext">Özel Evrim Okulları, Tüm Hakları Saklıdır © 2018</string>
    <string name="developertext">Uygulama, Arda Çebi tarafından geliştirilmiştir.</string>
    <string name="asset_statements" translatable="false">[{\n  \"relation\": [\"delegate_permission/common.handle_all_urls\"],\n  \"target\": {\n    \"namespace\": \"web\",\n    \"site\": \"https://www.evrim.k12.tr\",\n  }\n}]</string>
    <string name="turkishlanguage">Türkçe</string>
    <string name="italianlanguage">İtalyanca</string>
    <string name="englishlanguage">İngilizce</string>
    <string name="languagedialogtitle">Bir dil seçiniz</string>
    <string name="languagedialogsubtitle">Choose a Language</string>
    <string name="mobileapp">Mobil Uygulaması</string>
    <string name="title_activity_about">Uygulama Hakkında</string>
    <string name="about_text1">Özel Evrim Okulları mobil uygulaması, internet sitemizdeki bilgileri daha kullanıcı dostu ve hızlı şekilde sizlere ulaştırmayı hedeflemektedir.</string>
    <string name="about_text2">Mobil uygulamamız sayesinde internet sitemizdeki tüm içeriklere, anında çok daha hızlı ulaşabilirsiniz.</string>
    <string name="about_text3">Mobil uygulamaya özel içerik ve özelliklere erişebilirsiniz.</string>
    <string name="about_text4">Sahip olacağınız kişisel Evrim hesabınız ile size özel içeriklere erişebilirsiniz.</string>
    <string name="about_text5">Özel Evrim Okulları Android uygulaması, Arda Çebi tarafından geliştirilmektedir.</string>
</resources>